compile entrypoint under java 8